--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="skill-row">
         <img class="skill-row-img" src="images/app.png" alt="skill-row-img">
         <h3>Achievements</h3>
-        <p>Between 2017 to 2022, I worked on the National Multiagency Team. Our goal was to lower financial and technical losses for state-owned companies in the energy, national port services, national tax collection, and national health insurance sectors.</p>
+        <p>Between 2017 to 2022, I worked on the National Multiagency Team. Our goal was to lower commercial and technical losses for state-owned companies in the energy, national port services, national tax collection, and national health insurance sectors.</p>
       </div>
     </div>
 
