--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>John Mutinda</title>
+  <title>Resume</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
     <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
     <h1>I am John.</h1>
     <h2>
-      <p>a <span class="pro">pro</span>grammer</p>
+      <p>a <span class="pro">pro</span>grammer, data analyst and digital forensic examiner.</p>
     </h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
     <img src="images/mountain.png" alt="mountain-img">
