--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
     <h1>I am John.</h1>
     <h2>
-      <p>a <span class="pro">pro</span>grammer, data analyst and digital forensic examiner.</p>
+      <p> a criminal detective <span class="pro">pro</span>grammer, data analyst and digital forensic examiner.</p>
     </h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
     <img src="images/mountain.png" alt="mountain-img">
@@ -24,7 +24,7 @@
     <div class="profile">
       <img src="images/jon.png" alt="profile-img">
       <h2>Hello.</h2>
-      <p class="intro">I am competent in software development, data analysis and digital forensics.</p>
+      <p class="intro">I am a criminal detective competent in software development, data analysis, and digital forensics.</p>
     </div>
     <hr>
     <div class="skills">
