--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <h2>My Skills.</h2>
       <div class="skill-row">
         <img class="skills-img" src="images/analysis.png" alt="skills-img">
-        <h3>Digital Forensic | Data Analysis | Software Development</h3>
+        <h3>Digital Forensic | Data Analysis | Software Development | Detective</h3>
         <p>In terms of Software Development, I am competent in Python, Java, and React. js .In terms of data analysis, I am competent in R, Excel , SQL and Tableau. In digital forensics, I am fully conversant with softwares Axiom, EnCase, FTK, Autopsy, and Cellebrite.</p>
       </div>
       <div class="skill-row">
