--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
     <h1>I am John.</h1>
     <h2>
-      <p> a criminal detective, <span class="pro">pro</span>grammer, data analyst and digital forensic examiner.</p>
+      <p> a cyber security analyst.</p>
     </h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
     <img src="images/mountain.png" alt="mountain-img">
@@ -24,7 +24,7 @@
     <div class="profile">
       <img src="images/jon.png" alt="profile-img">
       <h2>Hello.</h2>
-      <p class="intro">I am a criminal detective competent in software development, data analysis, and digital forensics.</p>
+      <p class="intro">I am a cyber security analyst with experience and skills in computer forensics, network security, operating systems, intrusion detection, incident response, DevOps, threat knowledge, and mobile forensics.</p>
     </div>
     <hr>
     <div class="skills">
@@ -32,11 +32,11 @@
       <div class="skill-row">
         <img class="skills-img" src="images/analysis.png" alt="skills-img">
         <h3>Digital Forensic | Data Analysis | Software Development | Detective</h3>
-        <p>In terms of Software Development, I am competent in Python, Java, and React. js .In terms of data analysis, I am competent in R, Excel , SQL and Tableau. In digital forensics, I am fully conversant with softwares Axiom, EnCase, FTK, Autopsy, and Cellebrite.</p>
+        <p>In terms of software development, I have experience with Python, Java, and React.js. I am proficient in R, Excel, SQL, and Tableau for data analysis. In digital forensics, I am well-versed in Axiom, EnCase, FTK, Autopsy, and Cellebrite software.</p>
       </div>
       <div class="skill-row">
         <img class="skill-row-img" src="images/app.png" alt="skill-row-img">
-        <h3>Achievements</h3>
+        <h3>Eperience</h3>
         <p>Between 2017 to 2022, I worked on the National Multiagency Team. Our goal was to lower commercial and technical losses for state-owned companies in the<a href="https://kplc.co.ke/">energy</a>,<a href="https://www.kpa.co.ke/Pages/Default.aspx">national port services</a>,<a href="https://www.kra.go.ke/">national tax collection</a>,and<a href="http://www.nhif.or.ke/healthinsurance/">national health insurance</a>sectors.</p>
       </div>
     </div>
