--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
       <div class="skill-row">
         <img class="skills-img" src="images/analysis.png" alt="skills-img">
         <h3>Digital Forensic | Data Analysis | Software Development | Detective</h3>
-        <p>In terms of software development, I have experience with Python, Java, and React.js. I am proficient in R, Excel, SQL, and Tableau for data analysis. In digital forensics, I am well-versed in Axiom, EnCase, FTK, Autopsy, and Cellebrite software.</p>
+        <p>I have experience with Python, Java, and React.js in terms of software development. For data analysis, I am proficient in R, Excel, SQL, and Tableau. In digital forensics, I am well-versed in Axiom, EnCase, FTK, Autopsy, and Cellebrite software, as well as CEH and MCSE certification.</p>
       </div>
       <div class="skill-row">
         <img class="skill-row-img" src="images/app.png" alt="skill-row-img">
-        <h3>Eperience</h3>
+        <h3>Achievements.</h3>
         <p>Between 2017 to 2022, I worked on the National Multiagency Team. Our goal was to lower commercial and technical losses for state-owned companies in the<a href="https://kplc.co.ke/">energy</a>,<a href="https://www.kpa.co.ke/Pages/Default.aspx">national port services</a>,<a href="https://www.kra.go.ke/">national tax collection</a>,and<a href="http://www.nhif.or.ke/healthinsurance/">national health insurance</a>sectors.</p>
       </div>
     </div>
