--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="skill-row">
         <img class="skill-row-img" src="images/app.png" alt="skill-row-img">
         <h3>Achievements.</h3>
-        <p>Between 2017 to 2022, I worked on the National Multiagency Team. Our goal was to lower commercial and technical losses for state-owned companies in the<a href="https://kplc.co.ke/">energy</a>,<a href="https://www.kpa.co.ke/Pages/Default.aspx">national port services</a>,<a href="https://www.kra.go.ke/">national tax collection</a>,and<a href="http://www.nhif.or.ke/healthinsurance/">national health insurance</a>sectors.</p>
+        <p>Between 2017 to 2022, I worked on the National Multiagency Team. Our goal was to lower commercial and technical losses for state-owned companies in the<a href="https://kplc.co.ke/">energy</a>,<a href="https://www.kpa.co.ke/Pages/Default.aspx">national port services</a>,<a href="https://www.kra.go.ke/">national tax collection</a>,and<a href="http://www.nhif.or.ke/healthinsurance/">national health insurance</a>sectors.I'm developing a platform that will make it easier for the small electrical technicians in our country to connect with clients who need their services.</p>
       </div>
     </div>
 
