--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="profile">
       <img src="images/jon.png" alt="profile-img">
       <h2>Hello.</h2>
-      <p class="intro">I am a cyber security analyst with experience and skills in computer forensics, network security, operating systems, intrusion detection, malware analysis, incident response, DevOps, threat knowledge, and mobile forensics.</p>
+      <p class="intro">I am a cyber security analyst with experience and skills in computer forensics, network security, operating systems, intrusion detection, malware analysis, incident response, DevOps, threat knowledge and mobile forensics.</p>
     </div>
     <hr>
     <div class="skills">
