--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <img src="images/jon.png" alt="profile-img">
       <h2>Hello.</h2>
       <p class="intro">I am a cyber security analyst with experience and skills in computer forensics, network security, operating systems, intrusion detection, malware analysis, incident response, DevOps, threat knowledge and mobile forensics.</p>
+      
     </div>
     <hr>
     <div class="skills">
@@ -38,7 +39,7 @@
         <img class="skill-row-img" src="images/app.png" alt="skill-row-img">
         <h3>Achievements.</h3>
         <p>Between 2017 to 2022, I worked on the National Multiagency Team. Our goal was to lower commercial and technical losses for state-owned companies in the<a href="https://kplc.co.ke/">energy</a>,<a href="https://www.kpa.co.ke/Pages/Default.aspx">national port services</a>,<a href="https://www.kra.go.ke/">national tax collection</a>,and<a href="http://www.nhif.or.ke/healthinsurance/">national health insurance</a>sectors.</p>
-         <p>I'm a team leader among freelance developers working on a platform that will make it easier for our country's small electrical technicians to connect with clients in need of their services.</p>
+         <p>I am an <a href="https://www.epra.go.ke/">EPRA</a>-licensed electrical technician category C2 license number 4552, which has given me the opportunity to lead a team of freelance developers building a platform that will make it easier for our country's small electrical technicians to connect with clients in need of their services.</p>
       </div>
     </div>
 
