--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/in/john-mutinda-30815b76/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/datumanalyst254">Twitter</a>
-    <a class="footer-link" href="https://cid.go.ke/">Website</a>
+    <a class="footer-link" href="https://mkulimadigital.com/">Website</a>
     <p class="copyright">©2022 John Nyamai.</p>
   </div>
 
