--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <hr>
     <div class="contact-me">
       <h2>Get In Touch</h2>
-      <h3>I am currently freelancing.</h3>
+      <h3>I am currently working for the National Police Service Commission (NPSC).</h3>
       <p class="contact-message">You can contact me through the provided links.</p>
       <a class="btn" href="mailto:hsforensic254@gmail.com">CONTACT ME</a>
     </div>
@@ -56,8 +56,9 @@
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/in/john-mutinda-30815b76/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/datumanalyst254">Twitter</a>
-    <a class="footer-link" href="https://mkulimadigital.com/">Website</a>
-    <p class="copyright">©2022 John Nyamai.</p>
+    <a class="footer-link" href="https://www.expertwords.net/">Website</a>
+    <a class="footer-link" href="https://mkulimadigital.com/">e-commerce</a>
+    <p class="copyright">©2023 John Nyamai.</p>
   </div>
 
 </body>
