--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <hr>
     <div class="contact-me">
       <h2>Get In Touch</h2>
-      <h3>I am currently working for the National Police Service Commission (NPSC).</h3>
+      <h3>I am currently committed to civil and community services.</h3>
       <p class="contact-message">You can contact me through the provided links.</p>
       <a class="btn" href="mailto:hsforensic254@gmail.com">CONTACT ME</a>
     </div>
