--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <a class="footer-link" href="https://twitter.com/datumanalyst254">Twitter</a>
     <a class="footer-link" href="https://www.expertwords.net/">Website</a>
     <a class="footer-link" href="https://mkulimadigital.com/">e-commerce</a>
+       <a class="footer-link" href="https://bit.ly/3F84Chz">Repository</a>
     <p class="copyright">©2023 John Nyamai.</p>
   </div>
 
