--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
   <div class="top-container">
     <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
-    <h1>I am John.</h1>
+    <h1>I am John Mutinda.</h1>
     <h2>
-      <p> a cyber security analyst.</p>
+      <p> A Cybersecurity Analyst.</p>
     </h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
     <img src="images/mountain.png" alt="mountain-img">
@@ -24,7 +24,7 @@
     <div class="profile">
       <img src="images/jon.png" alt="profile-img">
       <h2>Hello.</h2>
-      <p class="intro">I am a cyber security analyst with experience and skills in computer forensics, network security, operating systems, intrusion detection, malware analysis, incident response, DevOps, threat knowledge and mobile forensics.</p>
+      <p class="intro">I am a cybersecurity analyst with experience and skills in computer forensics, network security, operating systems, intrusion detection, malware analysis, incident response, DevOps, threat knowledge and mobile forensics.</p>
       
     </div>
     <hr>
@@ -32,21 +32,21 @@
       <h2>My Skills.</h2>
       <div class="skill-row">
         <img class="skills-img" src="images/analysis.png" alt="skills-img">
-        <h3>Digital Forensic | Data Analysis | Software Development | Detective</h3>
+        <h3> Cybersecurity analyst | Data analyst | Detective | Digital Marketing </h3>
         <p>I have experience with Python, Java, and React.js in terms of software development. For data analysis, I am proficient in R, Excel, SQL, and Tableau. In digital forensics, I am well-versed in Axiom, EnCase, FTK, Autopsy, and Cellebrite software, as well as CEH and MCSE certification.</p>
       </div>
       <div class="skill-row">
         <img class="skill-row-img" src="images/app.png" alt="skill-row-img">
         <h3>Achievements.</h3>
-        <p>Between 2017 to 2022, I worked on the National Multiagency Team. Our goal was to lower commercial and technical losses for state-owned companies in the<a href="https://kplc.co.ke/">energy</a>,<a href="https://www.kpa.co.ke/Pages/Default.aspx">national port services</a>,<a href="https://www.kra.go.ke/">national tax collection</a>, and<a href="http://www.nhif.or.ke/healthinsurance/">national health insurance</a>sectors.</p>
-         <p>I am a certified electrical technician category C2 license number 4552 with our regulator -<a href="https://www.epra.go.ke/">EPRA</a>, which has given me the opportunity to lead a team of freelance developers working on the Mkulima Digital platform, which connects agricultural growers with consumers looking for fresh, good-quality produce.</p>
+        <p>Between 2017 to 2022, I worked on the National Multiagency Team. Our goal was to lower commercial and technical losses for state-owned entities in the<a href="https://kplc.co.ke/">Kenya Power </a>,<a href="https://www.kpa.co.ke/Pages/Default.aspx">Kenya Port Authority </a>,<a href="https://www.kra.go.ke/">Kenya Revenue Authority</a>, and<a href="http://www.nhif.or.ke/healthinsurance/">National Health Insurance Fund</a>sectors.</p>
+         <p>I am a certified electrical technician category C2 license number 4552 with our regulator -<a href="https://www.epra.go.ke/">EPRA</a>, which has given me the opportunity to lead a team of freelance developers working on the MkulimaDigital platform, which connects agricultural growers with consumers looking for fresh, good-quality produce.</p>
       </div>
     </div>
 
     <hr>
     <div class="contact-me">
       <h2>Get In Touch</h2>
-      <h3>I am currently committed to civil and community services.</h3>
+      <h3>I am the Head of the Digital Forensic Lab & Technical Operations at KRA. Beyond my professional role, I am passionate about community service and actively contribute to initiatives that create a positive impact.</h3>
       <p class="contact-message">You can contact me through the provided links.</p>
       <a class="btn" href="mailto:hsforensic254@gmail.com">CONTACT ME</a>
     </div>
@@ -59,7 +59,7 @@
     <a class="footer-link" href="https://www.expertwords.net/">Website</a>
     <a class="footer-link" href="https://mkulimadigital.com/">e-commerce</a>
        <a class="footer-link" href="https://bit.ly/3F84Chz">Repository</a>
-    <p class="copyright">©2023 John Nyamai.</p>
+    <p class="copyright">©2025 John Mutinda.</p>
   </div>
 
 </body>
