--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
     <a class="footer-link" href="https://www.linkedin.com/in/john-mutinda-30815b76/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/datumanalyst254">Twitter</a>
     <a class="footer-link" href="https://www.expertwords.net/">Website</a>
-    <a class="footer-link" href="https://mkulimadigital.com/">e-commerce</a>
+     <a class="footer-link" href="https://mkulimadigital.com/">Farmers' Portal</a>
+    <a class="footer-link" href="https://dukaletu.biz/index.php/en/">e-commerce</a>
        <a class="footer-link" href="https://bit.ly/3F84Chz">Repository</a>
     <p class="copyright">©2025 John Mutinda.</p>
   </div>
